--- a/KosaESS/src/main/resources/templates/manager/student_list.html
+++ b/KosaESS/src/main/resources/templates/manager/student_list.html
@@ -69,7 +69,7 @@
 					</div>
 					<div class="search_filter_table_row">
 						<div class="search_filter_name">검색어</div>
-						<div class="search_filter_input">
+						<div class="search_filter_input" id="search_filter_keyword">
 							<input type="text" class="input_keyword" placeholder="이메일 또는 이름">
 						</div>
 						<div class="search_filter_name">이수 상태</div>
