--- a/KosaESS/src/main/resources/templates/student/class_list.html
+++ b/KosaESS/src/main/resources/templates/student/class_list.html
@@ -19,7 +19,7 @@
 			<div class="search">
 				<div class="searchform">
 					<input type="text" class="searchInput"
-						placeholder="교육과정명 또는 회사명을 검색하세요."> <input type="button"
+						placeholder="교육과정명 또는 기업명을 검색하세요."> <input type="button"
 						class="searchBtn" value="검색"> <input type="checkbox"
 						name="aplyclass" id="aply"><label for="aply">지원가능한
 						교육만</label>
