--- a/KosaESS/src/main/resources/static/css/manager/manager_class_list.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_class_list.css
@@ -1,15 +1,13 @@
 @charset "UTF-8";
 
 ----------------------------------------------------------------------
-/* .checkbox_wrap div input{margin: 0} */
-.checkbox_wrap div{
-	display: flex;
-	width:100%;
-	justify-content: center;
-}
+	/* .checkbox_wrap div input{margin: 0} */
 
-input, progress {
-	accent-color: #0E5881;
+
+.checkbox_wrap div {
+	display: flex;
+	width: 100%;
+	justify-content: center;
 }
 
 .sidebar.open ~ .home-section {
@@ -43,7 +41,7 @@ input, progress {
 
 .search_btn_wrap img {
 	height: 1.2em;
-	margin:auto 0;
+	margin: auto 0;
 }
 
 #search_reset_btn {
@@ -56,8 +54,8 @@ input, progress {
 	width: 190px;
 	margin: 10px;
 	text-align: center;
-	align-items:center;
-	display:flex;
+	align-items: center;
+	display: flex;
 	height: 40px;
 	justify-content: center;
 }
@@ -72,13 +70,11 @@ input, progress {
 	width: 170px;
 	margin: 10px;
 	text-align: center;
-	align-items:center;
-	display:flex;
+	align-items: center;
+	display: flex;
 	height: 40px;
 	justify-content: center;
 }
-
-
 
 .search_filter_wrap {
 	width: 100%;
@@ -102,8 +98,8 @@ input, progress {
 
 .search_filter_list {
 	display: flex;
-	width:100%;
-	justify-content:space-between;
+	width: 100%;
+	justify-content: space-between;
 	font-size: 1.1em;
 }
 
@@ -149,6 +145,8 @@ input, progress {
 
 
 
+
+
 .gridlist {
 	display: flex;
 	flex-wrap: wrap;
@@ -165,6 +163,8 @@ input, progress {
 }
 
 --------------------------------------------------------
+
+
 
 
 .content_list {
@@ -285,8 +285,9 @@ input, progress {
 	font-weight: bold;
 	padding-left: 1em;
 	padding-right: 1em;
+	margin: 10px 0;
 }
 
-input[type="checkbox"]:hover, select:hover, button:hover{
+input[type="checkbox"]:hover, select:hover, button:hover {
 	cursor: pointer;
 }
