--- a/KosaESS/src/main/resources/templates/admin/lecture_list.html
+++ b/KosaESS/src/main/resources/templates/admin/lecture_list.html
@@ -89,7 +89,7 @@
 				<div class="content_info_wrap">
 					<div style="display: flex; align-items: center;">
 						<span>총 <span class="lecture_cnt cnt"
-							th:text="${#lists.size(lectureList)}"></span> 건
+							th:text="${#lists.size(lectureListAll)}"></span> 건
 						</span>
 					</div>
 					<div class="content_info_button_wrap">
