--- a/KosaESS/src/main/resources/templates/admin/subsidy_list.html
+++ b/KosaESS/src/main/resources/templates/admin/subsidy_list.html
@@ -99,8 +99,8 @@
 			<!-- 테이블 조작 -->
 			<div class="table_controller" id="tableController">
 				<div class="result_count">
-					<span>총 </span> <span th:text="${subsidyCnt}" id="result_count">0</span>
-					<span>명</span>
+					<span>총 <span th:text="${subsidyCnt}" id="result_count">0</span>
+					건</span>
 				</div>
 				<div class="sbsd_button">
 					<button th:each="sbsdCodeName:${subsidyStatusList}"
