[seungwoo][#etc] wlog resn_modal 수정중

--- a/KosaESS/src/main/resources/static/css/manager/manager_wlog_list.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_wlog_list.css
@@ -205,15 +205,5 @@ button{
 .number_cell {
 	text-align: right;
 }
-.resn_icon {
-	width: 15px;
-	height: 15px;
-}
 
-.resn_icon:hover {
-	cursor: pointer;
-}
-
-.wlog_list_tbody_row .file_cell_active:hover {
-	cursor: pointer;
-}
+/* ============================================================================================================================================ */
