--- a/KosaESS/src/main/resources/templates/manager/wlog_list.html
+++ b/KosaESS/src/main/resources/templates/manager/wlog_list.html
@@ -166,34 +166,33 @@
 <div class="resn_modal_wrap">
 	<div class="resn_modal">
 		<div class="modal_close_wrap">
-			<img src="/img/x_white.png" onclick="closeModal()">
+			<span class="modal_title" >사유서</span><img src="/img/x_white.png" class="close_icon" onclick="closeModal()">
 		</div>
 		<div class="wlog_info">
-			<table>
-				<tr>
-					<th>이름</th>
+			<table class="wlog_info_table">
+				<tr class="modal_tr">
+					<th class="modal_th">이름</th>
 						<td id="modal_name">이름</td>
-					<th>이메일</th>
+					<th class="modal_th">이메일</th>
 						<td id="modal_email">이메일</td>
-					<th>사유서 처리 상태</th>
+					<th class="modal_th">사유서 처리 상태</th>
 						<td id="modal_prcs_name">사유서 처리 상태</td>
 				</tr>
-				<tr>
-					<th>출근</th>
+				<tr class="modal_tr">
+					<th class="modal_th">출근</th>
 						<td id="modal_in_time">출근</td>
-					<th>퇴근</th>
+					<th class="modal_th">퇴근</th>
 						<td id="modal_out_time">퇴근</td>
-					<th>출석 상태</th>
+					<th class="modal_th">출석 상태</th>
 						<td id="modal_wlog_cd">출석 상태</td>
 				</tr>
 			</table>
 		</div>
 		
 		<div class="resn_content">
-			<div class="resn_file_list_wrap">
-				<ul class="resn_file_list">
-					<li class="resn_file_link">
-				</ul>
+			<div class="resn_img_list">
+			</div>
+			<div class="resn_file_list">
 			</div>
 			<div class="resn_text">
 				사유서 내용
