--- a/KosaESS/src/main/resources/templates/admin/manager_list.html
+++ b/KosaESS/src/main/resources/templates/admin/manager_list.html
@@ -36,7 +36,7 @@
 					<div class="filter_box_title">교육과정명</div>
 					<div>
 						<input class="search_class_id" type="hidden">
-						<input class="search_class_select" type="text" onclick="showSelectClassPopup(this)" readonly>
+						<input class="search_class_select" type="text" placeholder="교육과정을 선택하세요." onclick="showSelectClassPopup(this)" readonly>
 					</div>
 				</div>
 				<!-- 교육과정-->
@@ -655,8 +655,30 @@
 }
 	
 	//검샋 필터 - 교육과정 선택 버튼(팝업띄우기)
+	var popup2;
 	function showSelectClassPopup(input){
+		var divParent = input.closest('div');
 		
+		popup2 = window.open(
+				"/admin/select/class", "교육과정 선택 팝업", 
+				"width=750, height=750, left=900, top=500"
+		);
+		
+		window.addEventListener("message", function(event) {
+			if (event.data && event.data.event) {
+				if (event.data.event === 'classSelected') {
+					var clssId = event.data.clssId;
+					var clssNm = event.data.clssNm;
+
+					var hiddenInput = divParent
+							.querySelector(".search_class_id");
+
+					hiddenInput.value = clssId;
+					input.value = clssNm;
+
+				}
+			}
+		});
 	}
 	</script>
 </body>
