[seungwoo][#update]modal CSS

--- a/KosaESS/src/main/resources/static/css/manager/manager_class_list.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_class_list.css
@@ -288,6 +288,6 @@
 	margin: 10px 0;
 }
 
-input[type="checkbox"]:hover, select:hover, button:hover {
+input[type="checkbox"]:hover, button:hover {
 	cursor: pointer;
 }
