--- a/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
+++ b/KosaESS/src/main/resources/templates/manager/subsidy_insert.html
@@ -61,7 +61,7 @@
 						</select>
 					</div>
 					<div class="insert_name">지원금</div>
-					<div class="insert_input"><span id="subsidy_value">0</span><span>&nbsp;&#8361;</span></div>
+					<div class="insert_input"><div id="subsidy_value" class="subsidy_won">0</div><div class="subsidy_won">&nbsp;원</div></div>
 				</div>
 				<!-- 검색 버튼 -->
 				<div class="insert_btn_wrap">
