--- a/KosaESS/src/main/resources/static/css/manager/manager_subsidy_view.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_subsidy_view.css
@@ -299,3 +299,41 @@ input:hover, select:hover{
 	font-size: 1.1em;
 	height: 2em;
 }
+
+/* ============================================================================================================================================ */
+.pagination {
+	list-style: none;
+}
+
+.pagination li {
+	color: black;
+	float: left;
+	padding: 8px 16px;
+	text-decoration: none;
+}
+
+.pagination li a{
+	color: black;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.pagination li.active {
+	background-color: #0E5881;
+	color: white;
+	border-radius: 5px;
+}
+
+.pagination li.active a{
+	color:white;
+}
+
+.pagination li:hover:not(.active) {
+	background-color: #ddd;
+	border-radius: 5px;
+}
+.page_nav{
+	display: flex;
+	justify-content: center;
+	margin: 1em 0;
+}
