--- a/KosaESS/src/main/resources/static/css/manager/manager_wlog_list.css
+++ b/KosaESS/src/main/resources/static/css/manager/manager_wlog_list.css
@@ -29,7 +29,8 @@ button{
 	border: none;
 	border-radius: 0.3em;
 	font-weight: bold;
-	width : 90%;
+/* 	width : 90%; */
+	width:5em;
 	margin-left : 0.3em;
 	margin: 10px;
 	text-align: center;
@@ -207,3 +208,39 @@ button{
 }
 
 /* ============================================================================================================================================ */
+.pagination {
+	list-style: none;
+}
+
+.pagination li {
+	color: black;
+	float: left;
+	padding: 8px 16px;
+	text-decoration: none;
+}
+
+.pagination li a{
+	color: black;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.pagination li.active {
+	background-color: #0E5881;
+	color: white;
+	border-radius: 5px;
+}
+
+.pagination li.active a{
+	color:white;
+}
+
+.pagination li:hover:not(.active) {
+	background-color: #ddd;
+	border-radius: 5px;
+}
+.page_nav{
+	display: flex;
+	justify-content: center;
+	margin: 1em 0;
+}
