--- a/KosaESS/src/main/resources/static/css/manager/modal_style.css
+++ b/KosaESS/src/main/resources/static/css/manager/modal_style.css
@@ -1,12 +1,15 @@
 @charset "UTF-8";
 
 .modal_th{
-	background-color: #E7EFF3;
+/* 	border-top: 2px solid #0E5881; */
 	color: #0E5881;
+	border : 1px solid #CFDEE6;
+	background-color:#E7EFF3;
 }
 
-.modal_tr{
-/* 	background-color: #E7EFF3; */
+.modal_tr td{
+	border : 1px solid #CFDEE6;
+	font-size: 1.1em;
 }
 
 .resn_modal_wrap{
@@ -23,12 +26,13 @@
 	overflow: auto;
 }
 
-.resn_modal_wrap .resn_modal{
+.resn_modal{
 	width : 50%;
-	height : 70%;
+	height : 80%;
 	margin: auto;
 	position : fixed;
 	background-color:white;
+	display: inline-block;
 }
 
 .resn_modal_wrap .resn_modal .wlog_info{
@@ -38,15 +42,19 @@
 .wlog_info_table{
 	margin :0, auto;
 	border-collapse: collapse;
-	border:1px solid 6E9BB3;
 	width: 100%;
 	font-size: 1.1em;
+	border-bottom: 2px solid #0E5881;
 }
 
-.resn_modal_wrap .resn_modal .resn_controller {
+.resn_controller input{
+	width : 5em;
+}
+
+.resn_controller {
 /* 	border : 1px black solid; */
 	display: flex;
-	width: 50%;
+	width: 100%;
 	justify-content: center;
 }
 
@@ -55,6 +63,8 @@
 	color: #0E5881;
 	font-size: 1.1em;
 }
+
+/* 다운로드 아이콘 크기 조절 */
 .resn_file_list img{
 	height : 1.1em;
 }
@@ -66,9 +76,6 @@
 	text-align: center;
 }
 
-/* .modal_close_wrap img:hover{ */
-/* 	cursor: pointer; */
-/* } */
 .modal_close_wrap img{
 	height : 100%;
 	float: right;
@@ -93,17 +100,63 @@
 	cursor: pointer;
 }
 
-
-/* .close-icon:hover { */
-/* 	color: #f00; 닫기 아이콘에 호버 스타일 적용 (색상 변경 등) */
-/* } */
-
-
 .close_icon{
 	cursor: pointer;
 }
 
+.resn_img_list img{
+	width: 80%;
+	margin: 1em;
+}
 .resn_img_list{
 	display: none;
+	height:70%;
 	width: 100%;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	overflow: auto;
+	text-align: center;
+/* 	padding-top: 1em; */
+/* 	bottom: 0; */
+/* 	position: absolute; */
+/* 	z-index: 51; */
+	
+/* 	width: 100%; */
+/* 	justify-content: center; */
+/* 	align-items: center; */
+/* 	flex-direction: column; */
+/* 	overflow: auto; */
+}
+
+.resn_content{
+	height: 80%;
+	overflow: hidden;
+}
+.resn_text{
+	width: 100%;
+	height:20%;
+	display: flex;
+	overflow: auto;
+	padding: 2em;
+	font-size: 1.1em;
+}
+
+.resn_file_list{
+	width: 100%;
+	height:10%;
+	display: flex;
+	overflow: auto;
+/* 	padding: 2em; */
+	border : 1px solid #CFDEE6;
+	background-color:#E7EFF3;
+}
+
+.resn_file_list >div{
+	margin: 0.3em 0.5em;
+	align-items: center;
+	display: flex;
+}
+a:hover{
+	font-weight: bold;
 }
