[eunji][#update]css수정함

--- a/KosaESS/src/main/resources/templates/admin/class_list.html
+++ b/KosaESS/src/main/resources/templates/admin/class_list.html
@@ -176,16 +176,16 @@
 								<th style="width: 2%;">순번</th>
 								<th style="width: 5%;">ID</th>
 								<th style="width: 19%;">교육과정명</th>
-								<th style="width: 5%;">기업</th>
+								<th style="width: 7%;">기업</th>
 								<th style="width: 5%;">교육상태</th>
-								<th style="width: 5%;">수강 인원</th>
-								<th style="width: 5%;">지원 인원</th>
+								<th style="width: 4%;">수강 인원</th>
+								<th style="width: 4%;">지원 인원</th>
 								<th style="width: 15%;">지원기간</th>
 								<th style="width: 10%;">교육기간</th>
-								<th style="width: 5%;">교육시간</th>
-								<th style="width: 12%;">교육장소</th>
+								<th style="width: 7%;">교육시간</th>
+								<th style="width: 10%;">교육장소</th>
 								<th style="width: 5%;">업무담당자</th>
-								<th style="width: 8%;">지원금(&#8361;)</th>
+								<th style="width: 8%;">지원금(원)</th>
 							</tr>
 						</thead>
 						<tbody id="class_list_tbody">
