--- a/KosaESS/src/main/resources/templates/include/student_footer.html
+++ b/KosaESS/src/main/resources/templates/include/student_footer.html
@@ -5,7 +5,7 @@
 		<div class="container" style="margin: 0; padding-bottom:0;">
 			<div class="footerBody">
 				<div class="footerImg">
-					<a th:href="@{/student}"><img th:src="@{/img/footer_logo.png}"
+					<a th:href="@{/student}"><img th:src="@{/img/logo2.png}"
 						style="height: 100px;"></a>
 				</div>
 				<div class="links">
@@ -28,7 +28,7 @@
 						<li><img th:src="@{/img/phone.png}"><span
 							style="width: 80px;">전화번호 </span><span>010-5744-9937</span></li>
 						<li><img th:src="@{/img/email.png}"><span
-							style="width: 80px;">이메일 </span><span>kcceducation@gmail.com</span></li>
+							style="width: 80px;">이메일 </span><span>tess@gmail.com</span></li>
 					</ul>
 				</div>
 				<div class="emailJoin">
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 		<div class="footerFoot">
-			&copy; KCCEducation Template by <a th:href="@{/student}">OREO</a>
+			&copy; TESS Template by <a th:href="@{/student}">OREO</a>
 		</div>
 	</footer>
 </div>
