--- a/KosaESS/src/main/resources/templates/include/student_header.html
+++ b/KosaESS/src/main/resources/templates/include/student_header.html
@@ -8,8 +8,8 @@
 <div>
 	<header>
 		<div class="container">
-			<a th:href="@{/student}"> <img th:src="@{/img/logo.png}"
-				style="height: 60px;" />
+			<a th:href="@{/student}"> <img th:src="@{/img/logo2.png}"
+				style="height: 75px;" />
 			</a>
 
 			<div th:if="${session.userEmail==null}">
