--- a/KosaESS/src/main/resources/templates/student/main.html
+++ b/KosaESS/src/main/resources/templates/student/main.html
@@ -204,7 +204,9 @@
 			<div class="news con" style="background: #E7EFF3; width: 43%;">
 				<h2 style="margin-bottom: 0;">협회 관련 뉴스</h2>
 				<div style="display: block; text-align: end;">
-					<a class="plus" th:href="@{https://search.naver.com/search.naver?where=news&sm=tab_jum&query=KOSA}" target='_blank'>+</a>
+					<a class="plus"
+						th:href="@{https://search.naver.com/search.naver?where=news&sm=tab_jum&query=KOSA}"
+						target='_blank'>+</a>
 				</div>
 				<hr>
 			</div>
@@ -216,6 +218,11 @@
 						target='_blank'>+</a>
 				</div>
 				<hr>
+				<table class="youtubeTable">
+					<tr>
+						<td>
+					</tr>
+				</table>
 			</div>
 		</div>
 	</div>
