--- a/KosaESS/src/main/resources/templates/student/main.html
+++ b/KosaESS/src/main/resources/templates/student/main.html
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container" style="margin-top: -7%;">
+	<div class="container" style="margin-top: -7%; padding-bottom: 0;">
 		<div class="button-list">
 			<button class="banner-button button-left" style="margin-right: 1%;"></button>
 			<button class="banner-button button-right"></button>
@@ -201,7 +201,7 @@
 				</table>
 			</div> -->
 
-			<div class="news con" style="background: #E7EFF3; width: 43%;">
+			<!-- <div class="news con" style="background: #E7EFF3; width: 43%;">
 				<h2 style="margin-bottom: 0;">협회 관련 뉴스</h2>
 				<div style="display: block; text-align: end;">
 					<a class="plus"
@@ -223,7 +223,7 @@
 						<td>
 					</tr>
 				</table>
-			</div>
+			</div> -->
 		</div>
 	</div>
 	<div th:replace="~{/include/student_footer :: footer}"
