--- a/KosaESS/src/main/resources/templates/include/student_footer.html
+++ b/KosaESS/src/main/resources/templates/include/student_footer.html
@@ -5,7 +5,7 @@
 		<div class="container" style="margin: 0; padding-bottom:0;">
 			<div class="footerBody">
 				<div class="footerImg">
-					<a th:href="@{/student}"><img th:src="@{/img/logo2.png}"
+					<a th:href="@{/student}"><img th:src="@{/img/logo_white.png}"
 						style="height: 100px;"></a>
 				</div>
 				<div class="links">
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 		<div class="footerFoot">
-			&copy; TESS Template by <a th:href="@{/student}">OREO</a>
+			&copy; TESS Template by <a th:href="@{/student}">5</a>
 		</div>
 	</footer>
 </div>
