--- a/KosaESS/src/main/resources/templates/student/main.html
+++ b/KosaESS/src/main/resources/templates/student/main.html
@@ -18,13 +18,13 @@
 		<div class="img-list">
 			<div class="imgs img1">
 				<div class="bannertext">
-					<h2 style="font-size: 30px;">KOSA 교육 지원 시스템</h2>
+					<h2 style="font-size: 30px;">TESS 교육 지원 시스템</h2>
 					<h1 style="font-size: 40px;">새로운 교육을 통해서 더 나은 내일로</h1>
 				</div>
 			</div>
 			<div class="imgs img2">
 				<div class="bannertext">
-					<h2 style="font-size: 30px;">KOSA 교육지원 시스템을 통해서 여러 교육을 만나보세요.</h2>
+					<h2 style="font-size: 30px;">TESS 교육지원 시스템을 통해서 여러 교육을 만나보세요.</h2>
 				</div>
 			</div>
 		</div>
